[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ppt2txt"]

[project]
name = "ppt2txt"
authors = [
    {name = "Mattia Mancassola"}
]
description = "A pure python based utility to extract text from PPT files."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "ppt", "binary", "extract", "parse"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "olefile==0.46",
]