[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt2txt"
authors = [
    {name = "Mattia Mancassola"}
]
description = "A pure python based utility to extract text from PPT files."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "ppt", "binary", "extract", "parse"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "olefile==0.46",
]

[project.scripts]
ppt2txt = "ppt2txt.__main__:main"

[project.urls]
Homepage = "https://github.com/mett29/ppt2txt"